--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -1,8 +1,8 @@
 .side-menu {
     display: block;
     position: absolute;
-    width: 300px;
-    height: 900px;
+    width: 250px;
+    height: 1020px;
     left: -3px;
     top: 155px;
     bottom: 150px;
@@ -13,11 +13,12 @@
   .cat-header {
     margin-top: 10px;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: #ffffff;
   }
   .cat-list {
     list-style: none;
+    margin-top: 30px;
   }
   .cat-list li {
     font-size: 20px;
@@ -30,7 +31,7 @@
     margin-right: 20px;
   }
   .cat-list hr {
-    width: 230px;
+    width: 180px;
     margin-right: 30px;
     border: 0.476244px solid #f4f4f8;
   }
