--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -19,6 +19,11 @@
   .cat-list {
     list-style: none;
     margin-top: 30px;
+    position: relative;
+  }
+  .cat-list a{
+    text-decoration: none;
+    cursor: pointer;
   }
   .cat-list li {
     font-size: 20px;
@@ -34,4 +39,42 @@
     width: 180px;
     margin-right: 30px;
     border: 0.476244px solid #f4f4f8;
+  }
+
+  .sub-cat-list{
+    list-style: none;
+    /* position: absolute; */
+    display: block;
+  }
+  .sub-cat-list1{
+    display: none;
+    list-style: none;
+  }
+
+  .sub-cat-list li {
+    font-size: 18px;
+    line-height: 16px;
+    color: #ffffff;
+    margin: 0 0 20px 0;
+  }
+  .sub-cat-list li span{
+    font-size: 20px;
+  }
+
+  .sign-in-btn {
+    background: #E3FC52;
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #325654;
+    font-size: 16px;
+    padding: 10px 20px 10px 20px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .sign-in-btn:hover {
+    text-decoration: none;
+    color: #325654;
   }
