--- a/src/assets/css/Signin.css
+++ b/src/assets/css/Signin.css
@@ -1,4 +1,4 @@
-#ip2 {
+#ip2, #ip3 {
     border-radius: 25px;
     border: 2px solid #325654;
     padding: 20px; 
@@ -41,7 +41,7 @@ margin: 15px 0;
   .form-group {
     display: block;
     margin-bottom: 0px;
-    margin-top: 20px;
+    margin-top: 8px;
   }
   
   .form-group input {
@@ -77,7 +77,7 @@ margin: 15px 0;
     content: '';
     display: block;
     position: absolute;
-    top: 2px;
+    top: -2px;
     left: 9px;
     width: 6px;
     height: 16px;
