--- a/src/assets/css/Feedback.css
+++ b/src/assets/css/Feedback.css
@@ -13,14 +13,13 @@
     color: #00160A;
 }
 .rating span{
-    left: 50%;
     margin: 30px 20px;
     font-size: 50px;
     color: #d1d4d3;
 }
 
 .rating span:hover{
-    color: #E3FC52;
+    color: #daec70;
     cursor: pointer;
 }
 
@@ -35,24 +34,29 @@
     border-radius: 5px;
     padding: 20px 15px;
   }
-.reviews button{
-    display: inline-flex;
-    background: #fff;
-    height: 65px;
-    width: 400px;
-    left: 40%;
-    align-items: center;
-    justify-content: center;
+
+.reviews input[type="radio"]{
+    display: none;
+}
+.reviews label{
+    border: 2px solid #1C4A45;
     border-radius: 5px;
     padding: 20px 15px;
-    margin: 0 10px;
-    font-size: 20px;
+    width: 100px;
 }
-.reviews button:hover{
+.activeRadio{
     background: #1C4A45;
     border: 1px solid #1C4A45;
     color: #FFFFFF;
+    cursor: pointer;
 }
+.reviews label:hover{
+    background: #1C4A45;
+    border: 1px solid #1C4A45;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
 .send-btn{
     background: #FFFFFF;
     border: 1.90656px solid #1C4A45;
