--- a/src/assets/css/Admin/Products.css
+++ b/src/assets/css/Admin/Products.css
@@ -156,5 +156,82 @@ input[type="file"] {
     cursor: pointer;
 }
 
+.options input[type="radio"]{
+    display: none;
+}
+.options{
+    display: inline-flex;
+    background: #fff;
+    height: 100px;
+    width: 450px;
+    left: 40%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    padding: 20px 15px;
+}
 
+.options label{
+    border: 2px solid #1C4A45;
+    border-radius: 5px;
+    padding: 20px 5px;
+    width: 120px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.options label:hover{
+    background: #1C4A45;
+    border: 1px solid #1C4A45;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.activeRadio{
+    background: #1C4A45;
+    border: 1px solid #1C4A45;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.brandName{
+    margin-left: 20px;
+    width: 50%;
+    background: rgba(50, 86, 84, 0.93);
+    border-radius: 10px;
+    border: none;
+    color: white;
+    padding-left: 15px;
+    height: 35px;
+    margin-bottom: 20px;
+}
+
+.categoryName{
+    margin-left: 10px;
+    width: 50%;
+    background: rgba(50, 86, 84, 0.93);
+    border-radius: 10px;
+    border: none;
+    color: white;
+    padding-left: 15px;
+    height: 35px;
+    margin-bottom: 20px;
+}
+.subcategoryName{
+    margin-left: 17px;
+    width: 50%;
+    background: rgba(50, 86, 84, 0.93);
+    border-radius: 10px;
+    border: none;
+    color: white;
+    padding-left: 15px;
+    height: 35px;
+    margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px){
+    .options{
+        width: 280px;
+    }
+}
 
