--- a/src/assets/css/ProductDetails.css
+++ b/src/assets/css/ProductDetails.css
@@ -72,16 +72,13 @@
       border: 1px solid rgb(216, 216, 216);
       margin: 0 20px;
       border-radius: 50%;
-      width: 50px;
+      width: 55px;
       height: 50px;
       text-align: center;
 
   }
   .socials button:hover{
     text-decoration: none;
-}
-.socials i{
-    margin: auto;
 }
 
 .socials .fb{
@@ -97,6 +94,7 @@
     color: black;
 }
 .socials .sms{
+    margin-top: 3px;
     margin-left: 5px;
     color: black;
 }
