--- a/src/assets/css/Admin/AdminSidebar.css
+++ b/src/assets/css/Admin/AdminSidebar.css
@@ -77,7 +77,7 @@
   padding: 20px 80px;
 }
 
-@media only screen and (max-width: 770px) {
+  @media only screen and (max-width: 770px) {
     .sideMenu{
         display: none;
       }
@@ -89,4 +89,51 @@
       padding: 20px 20px;
     }
   }
+  @media only screen and (min-width: 770px){
+    .mobileMenu{
+      display: none;
+    }
+  }
+  
+  @media only screen and (max-width: 770px){
+    .mobileMenu{
+      display: block;
+      width: 90%;
+
+    }
+    .mobileMenu ul{
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .activeLink{
+      width: 80px;
+      list-style: none;
+      background-color: #325654;
+      border: 2px solid #325654;
+      text-align: center;
+      padding: 12px 5px;
+      border-radius: 10px;
+      font-weight: 500;
+      cursor: pointer;
+      color: white;
+      font-size: 14px;
+    }
+  
+    .inActiveLink{
+      width: 80px;
+      list-style: none;
+      background-color: white;
+      border: 2px solid #0d6b26;
+      text-align: center;
+      padding: 12px 5px;
+      border-radius: 10px;
+      font-weight: 500;
+      cursor: pointer;
+      color: black;
+      font-size: 14px;
+    }
+  }
+
+  
 
