--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -8,6 +8,9 @@
     background: #1c4a45;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     overflow-x: hidden;
+    min-height: calc(100% - 155px);
+    /* min-height: 100vh; */
+    z-index: 1;
   }
   .cat-header {
     margin-top: 10px;
