--- a/src/assets/css/Signin.css
+++ b/src/assets/css/Signin.css
@@ -53,10 +53,12 @@ margin: 15px 0;
     cursor: pointer;
   }
   
-  .form-group label {
+  .form-group #check1{
     position: relative;
     cursor: pointer;
-  }
+    color: #325654;
+    font-size: 17px;
+  } 
   
   .form-group label:before {
     content:'';
@@ -90,7 +92,7 @@ margin: 15px 0;
     font-weight: 600;
     font-size: 16.3468px;
     color: #325654;
-    margin-top: 20px;
+    margin-top: 22px;
     margin-right: 10px;
   }
 
@@ -122,4 +124,31 @@ margin: 15px 0;
   font-size: 14px;
   font-weight: 500;
   line-height: 15px;
+}
+
+
+@media only screen and (max-width: 400px) {
+  #ip2, #ip3 {
+    border-radius: 25px;
+    border: 2px solid #325654;
+    padding: 20px; 
+    width: 250px;
+    height: 15px;  
+  }
+  .btn0 {
+    width: 250px;
+      
+  }
+
+  .forgot{
+    font-size: 14px;
+    margin-top: 25px;
+  }
+
+  .form-group #check1{
+    position: relative;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
 }
