--- a/src/assets/css/Admin/AdminSidebar.css
+++ b/src/assets/css/Admin/AdminSidebar.css
@@ -3,6 +3,19 @@
     width: 100%;
     min-height: 700px;
     margin-top: -22.5px;
+    z-index: 2;
+  }
+
+  .dashboardIcn{
+    width: 12%;
+    margin-right: 10px;
+    margin-left: 5px;
+  }
+
+  .userIcn{
+    width: 10%;
+    margin-right: 10px;
+    margin-left: 8px;
   }
 
   .menuHeader{
@@ -24,10 +37,10 @@
   }
 
   .catList li {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 50px;
     margin: 15px 0;
-    width: 80%;
+    width: 95%;
     border-bottom: 1px solid rgb(255, 255, 255);
   }
 
