--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -11,6 +11,11 @@
     /* box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5); */
     /* transition: 0.5s ease-in-out; */
     border-radius: 12.3362px;
+    
+  }
+  .cardLink:hover{
+    cursor: pointer;
+    text-decoration: none;
   }
   
   .cards:before {
@@ -76,6 +81,10 @@
     color: #000000;
     padding: 3px 10px;
 
+  }
+
+  .cards .view_now-btn:hover{
+    text-decoration: none;
   }
   .play-icon{
     width: 10px;
