--- a/src/assets/css/ProductDetails.css
+++ b/src/assets/css/ProductDetails.css
@@ -36,6 +36,7 @@
      font-size: 17px;
      text-decoration: none;
      color: black;
+     cursor: context-menu;
  }
  .title1 a:hover{
      text-decoration: none;
